<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.cartoland</groupId>
    <artifactId>Cartoland</artifactId>
    <version>2.0</version>

    <name>Cartoland Bot</name>
    <description>A Discord bot that belongs to a server: Cartoland</description>
    <url>https://github.com/AlexCai2019/Cartoland</url>

    <licenses>
        <license>
            <name>MIT License</name>
            <url>https://github.com/AlexCai2019/Cartoland/blob/master/LICENSE.md</url>
            <distribution>manual</distribution>
        </license>
    </licenses>

    <developers>
        <developer>
            <name>Alex Cai</name>
            <email>alexcai910630@gmail.com</email>
            <url>https://github.com/AlexCai2019</url>
            <timezone>8</timezone>
            <roles>
                <role>Project Manager</role>
            </roles>
        </developer>
    </developers>

    <contributors>
        <contributor>
            <name>Mega</name>
        </contributor>
        <contributor>
            <name>champsing</name>
            <url>https://github.com/champsing</url>
        </contributor>
        <contributor>
            <name>Mango Jelly Pudding</name>
            <url>https://github.com/EvanHsieh0415</url>
        </contributor>
        <contributor>
            <name>Hexakon</name>
            <url>https://github.com/Hexakon</url>
        </contributor>
    </contributors>

    <dependencies>
        <!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-nop -->
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-nop</artifactId>
            <version>2.0.7</version>
            <scope>test</scope>
        </dependency>
        <!-- https://mvnrepository.com/artifact/net.dv8tion/JDA -->
        <!-- https://github.com/DV8FromTheWorld/JDA -->
        <dependency>
            <groupId>net.dv8tion</groupId>
            <artifactId>JDA</artifactId>
            <version>5.0.0-beta.6</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/org.json/json -->
        <!-- https://github.com/stleary/JSON-java -->
        <dependency>
            <groupId>org.json</groupId>
            <artifactId>json</artifactId>
            <version>20230227</version>
        </dependency>
    </dependencies>

    <properties>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
    </properties>

</project>